--- a/style.css
+++ b/style.css
@@ -17,5 +17,79 @@ html, body{
     border-radius: 25px;
     overflow: hidden;
 }
-
+.create-placemark{
+    position: absolute;
+    margin-top: 15%;
+    margin-left: 15%;
+    width: 200px;
+    height: 50px;
+}
+.input{
+    position: absolute;
+    margin-top: 23.5%;
+    margin-left: 15%;
+    width: 200px;
+    height: 20px;
+}
+.input2{
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 15%;
+    width: 200px;
+    height: 20px;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover {
+    color: #000;
+  }
+  @media screen and (min-width: 320px) and (max-width: 400px) {
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    
+    .map {
+      width: 90%;
+      height: 200px;
+      margin-top: 20px;
+    }
+    .create-placemark {
+        margin-top: 80%;
+        margin-left: 22%;
+    }
+    .input{
+      margin-top: 100%;
+      margin-left: 22%;
+    }
+    .input2 {
+      margin-top: 110%;
+      margin-left: 22%;
+    }
+  }
 
