--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,22 @@
 html, body{
     background-color: rgb(166, 196, 196);
     height: 100%;
+    width: 100%;
     margin: 0;
+    background-image: linear-gradient( 135deg, #FFD26F 10%, #3677FF 100%);
 }
 .container{
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
-.map{
-    position: absolute;
-    margin-left: 50%;
-    transform: translate(-51%);
-    width: 300px;
-    height: 300px;
-    margin-top: 70px;
-    border-radius: 25px;
-    overflow: hidden;
+.map {
+  position: absolute  ;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 1;
 }
 .create-placemark{
     position: absolute;
@@ -23,6 +24,7 @@ html, body{
     margin-left: 15%;
     width: 200px;
     height: 50px;
+    z-index: 3;
 }
 .input{
     position: absolute;
@@ -30,6 +32,7 @@ html, body{
     margin-left: 15%;
     width: 200px;
     height: 20px;
+    z-index: 3;
 }
 .input2{
     position: absolute;
@@ -37,11 +40,12 @@ html, body{
     margin-left: 15%;
     width: 200px;
     height: 20px;
+    z-index: 3;
 }
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 4;
     left: 0;
     top: 0;
     width: 100%;
