--- a/styles/style.css
+++ b/styles/style.css
@@ -79,20 +79,19 @@ html, body{
     }
     
     .map {
-      width: 90%;
-      height: 200px;
-      margin-top: 20px;
+      width: 100%;
+      height: 100%;
     }
     .create-placemark {
-        margin-top: 80%;
+        margin-top: 115%;
         margin-left: 22%;
     }
     .input{
-      margin-top: 100%;
+      margin-top: 135%;
       margin-left: 22%;
     }
     .input2 {
-      margin-top: 110%;
+      margin-top: 145%;
       margin-left: 22%;
     }
   }
