--- a/styles/style.css
+++ b/styles/style.css
@@ -21,8 +21,8 @@ html, body{
 }
 .add-placemark {
   margin-top: 2%;
-  margin-left: 2%;
-  position: fixed;
+  margin-left: 7%;
+  position: absolute;
   z-index: 3;
   --main-focus: #2d8cf0;
   --font-color: #010101;
@@ -125,7 +125,7 @@ html, body{
 .modal {
     display: none;
     position: fixed;
-    z-index: 4;
+    z-index: 7;
     left: 0;
     top: 0;
     width: 100%;
@@ -155,7 +155,7 @@ html, body{
   .modal-placemark {
     display: none;
     position: fixed;
-    z-index: 4;
+    z-index: 7;
     left: 0;
     top: 0;
     width: 100%;
@@ -230,6 +230,70 @@ html, body{
   
   .close:hover {
     color: #000;
+  }
+  .title-menu h1{
+    font-family: "Jetbrains Mono", monospace;
+    font-size: 40px;
+    color: #fcfffc;
+    margin-left: 40px;
+  }
+  .list_menu a{
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 25px;
+    color: #fcfffc;
+    border-left: 2px solid #F5B7C7;
+    transition: 0.2s ease;
+    padding-left: 5px;
+    text-decoration: none;
+  }
+  .list_menu ul{
+    list-style-type: none;
+  }
+  .list_menu a:hover{
+    border-left: 2px solid #F5B7C7;
+    transition: 0.2s ease;
+    padding-left: 10px;
+  }
+  .list_menu li{
+    margin: 20px 0 0 0;
+  }
+  .list_menu{
+    margin-bottom: 50px;
+  }
+  .menu {
+    padding: 25vh 50px;
+    background: rgba(20, 20, 20, 0.7);
+    height: 100vh;
+    border-right: 3px solid #000000;
+    position: fixed;
+    transition: 0.4s ease;
+    z-index: 7;
+    backdrop-filter: blur(5px);
+    left: -48vh;
+  }
+  .menu-window-open{
+    left: 0;
+    transition: 0.5s ease;
+  }
+  .footer_menu p{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 15px;
+    color: #fcfffc;
+    opacity: 0.7;
+  }
+  .menu-button{
+    position: absolute;
+    z-index: 6;
+    top: 3.7%;
+    left: 2%;
+    width: 50px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #ffffff;  
+  }
+  .menu-button img{
+    width: 80%;
+    height: 80%;
   }
   @media screen and (min-width: 320px) and (max-width: 400px) {
     .container {
