--- a/styles/style.css
+++ b/styles/style.css
@@ -290,6 +290,7 @@ html, body{
     height: 50px;
     border-radius: 15px;
     background-color: #ffffff;  
+    cursor: pointer;
   }
   .menu-button img{
     width: 80%;
@@ -300,12 +301,12 @@ html, body{
       display: flex;
       flex-wrap: wrap;
     }
-    
     .map {
       width: 100%;
       height: 100%;
     }
     .add-placemark {
+      margin-left: 25%;
         width: 130px;
     }
     .input{
@@ -316,6 +317,23 @@ html, body{
     }
     .modal-content-placemark {
       width: 80%;
+    }
+    .menu-button{
+      left: 5%;
+      margin-top: -5%;
+    }
+    .menu{
+      left: -100%;
+      width: 40%;
+    }
+    .menu h1{
+      margin-left: -10%;
+    }
+    .list_menu a{
+      margin-left: -60%;
+    }
+    .menu-window-open{
+      left: 0;
     }
   }
 
