--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ html, body{
   z-index: 1;
 }
 .add-placemark {
-  margin-top: 2%;
+  margin-top: 2.15%;
   margin-left: 7%;
   position: absolute;
   z-index: 3;
@@ -235,13 +235,12 @@ html, body{
     font-family: "Jetbrains Mono", monospace;
     font-size: 40px;
     color: #fcfffc;
-    margin-left: 40px;
   }
   .list_menu a{
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 25px;
     color: #fcfffc;
-    border-left: 2px solid #F5B7C7;
+    border-left: 2px solid #37FF8B;
     transition: 0.2s ease;
     padding-left: 5px;
     text-decoration: none;
@@ -250,12 +249,12 @@ html, body{
     list-style-type: none;
   }
   .list_menu a:hover{
-    border-left: 2px solid #F5B7C7;
+    border-left: 2px solid #37FF8B;
     transition: 0.2s ease;
     padding-left: 10px;
   }
   .list_menu li{
-    margin: 20px 0 0 0;
+    margin: 20px 0 0 -40px;
   }
   .list_menu{
     margin-bottom: 50px;
@@ -277,7 +276,7 @@ html, body{
   }
   .footer_menu p{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 25px;
     color: #fcfffc;
     opacity: 0.7;
   }
@@ -296,6 +295,77 @@ html, body{
     width: 80%;
     height: 80%;
   }
+  .slider-container {
+    width: 260px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+  .slider {
+    width: 100%;
+    margin-right: 10px;
+  }
+  #sliderValue {
+    font-size: 18px;
+    color: #37FF8B;
+  }
+  /* The switch - the box around the slider */
+.switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+/* To hide the checkbox */
+#checkboxInput {
+  display: none;
+}
+
+.toggleSwitch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 50px;
+  height: 30px;
+  background-color: rgb(148, 118, 255);
+  border-radius: 20px;
+  cursor: pointer;
+  transition-duration: .2s;
+}
+
+.toggleSwitch::after {
+  content: "";
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  left: 5px;
+  background-color: transparent;
+  border-radius: 50%;
+  transition-duration: .2s;
+  box-shadow: 5px 2px 7px rgba(8, 8, 8, 0.26);
+  border: 5px solid white;
+}
+
+#checkboxInput:checked+.toggleSwitch::after {
+  transform: translateX(100%);
+  transition-duration: .2s;
+  background-color: white;
+}
+/* Switch background change */
+#checkboxInput:checked+.toggleSwitch {
+  background-color: #37FF8B;
+  transition-duration: .2s;
+}
+
   @media screen and (min-width: 320px) and (max-width: 400px) {
     .container {
       display: flex;
@@ -306,6 +376,7 @@ html, body{
       height: 100%;
     }
     .add-placemark {
+      margin-top: 2.5%;
       margin-left: 25%;
         width: 130px;
     }
@@ -334,6 +405,9 @@ html, body{
     }
     .menu-window-open{
       left: 0;
+    }
+    .slider {
+      width: 80%
     }
   }
 
