--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ html, body{
   box-shadow: 4px 4px var(--main-color);
   background-color: var(--bg-color);
   border-radius: 10px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .add-placemark, .button__icon, .button__text {
@@ -160,13 +160,13 @@ html, body{
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
   }
   .add-placemark2 {
-    top: 33%;
-    margin: 0;
+    top: 70%;
+    margin-left: 7%;
   height: auto;
   background: transparent;
   padding: 0;
@@ -220,6 +220,20 @@ html, body{
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     border-radius: 20px;
+    overflow: auto;
+    scrollbar-width: thin;
+    scrollbar-color: transparent transparent;
+  }
+  .modal-content-placemark::-webkit-scrollbar {
+    width: 6px;
+  }
+  
+  .modal-content-placemark::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  .modal-content-placemark::-webkit-scrollbar-thumb {
+    background-color: transparent;
   }
   .close {
     float: right;
@@ -365,7 +379,28 @@ html, body{
   background-color: #37FF8B;
   transition-duration: .2s;
 }
-
+#radioButton, #myLabel, #myLabelText{
+  position: fixed;
+  margin-top: 20%;
+}
+#myLabelText{
+  margin-top: 18.6%;
+  color: white;
+  margin-left: 8%;
+  font-size: 20px;
+}
+#radioButton2, #myLabel2, #myLabelText2{
+  position: fixed;
+  margin-top: 20%;
+  margin-left: 20%;
+  
+}
+#myLabelText2{
+  margin-top: 18.6%;
+  color: white;
+  margin-left: 26%;
+  font-size: 20px;
+}
   @media screen and (min-width: 320px) and (max-width: 400px) {
     .container {
       display: flex;
