--- a/styles/profile.css
+++ b/styles/profile.css
@@ -48,6 +48,8 @@ body{
     width: 100%;
     height: 100%;
     pointer-events: none;
+    max-width: 100%;
+    max-height: 100%;
 }
 @media screen and (min-width: 320px) and (max-width: 420px) {
     .custom-shape-divider-top-1709916808 {
@@ -90,7 +92,10 @@ body{
       left: 50%;
       transform: translate(-50%, -50%);
     }
-  
+    .profile-photo img {
+        max-width: 100%;
+        max-height: 100%;
+    }
     .input-photo {
       position: absolute;
       width: 100%;
